New in SVN
----------

* Support rst2pdf [inf [outf]] syntax to be more compatible with rst2*
* Implemented Issue 389: New --strip-element-with-class option
* Fixed Issue 474: CellStyle1 is not there in reportlab 2.6
* Removed default padding from DelayedTable, which looked bad
  on headers/footers.
* Improvements to the math directive (font color and size)
* Better support for styling literals.
* Fixed Issue 454 (Splitting failure)
* Regressed Issue 374 (some literal blocks get oversplit)
* Switched from svglib to svg2rlg
* Removed uniconvertor support
* Fixed Issue 477: Sink footnote separator (patch by asermax)
* Fixed Issue 473: Support "code" directive like an alias of code-block.
* Fixed Issue 472: Implemented MyImage._unRestrictSize
* Fixed Issue 471: Respect class in lineblocks.
* Fixed Issue 455: New pisa/xhtml2pdf has very different imports
* Reopened Issue 289: Broken bullet customization.
* Reopened Issue 310: Line numbers in code blocks are wrong
* Reopened Issue 337: Bad layout with inline images in tables
* Marked Issue 358 as fixed.
* Fixed Issue 410: always include full lines in code-blocks (mmueller patch)
* Regression in stylesheet includes: Issue 483
* Regression in fancytitles extension: Issue 486

New in 0.92
-----------

* Fixed Issue 394; missing _restrictSize method with RL 2.5
* Fixed Issue 452: applying missing classes to lists crashed rst2pdf
* Fixed Issue 427: multiple spaces collapsed on inline literals.
* Fixed Issue 451: roman.py was moved in docutils 0.9
* Fixed Issue 446: made it work again with python 2.4

New in 0.91
-----------

* Fixed Issue 438: sphinx support was completely broken in 0.90

New in 0.90
-----------

* Added raw HTML support, by Dimitri Christodoulou
* Fixed Issue 422: Having no .afm files made font lookup slow.
* Fixed Issue 411: Sometimes the windows registry has the font's abspath.
* Fixed Issue 430: Using --config option caused other options to 
  be ignored (by charles at cstanhope dot com)